infra/k8s/toy-infra/Prometheus-Grafana-Alertmanager/host-exporters-monitoring.yaml
#宿主机上的 MySQL/Redis exporter——复用"无 selector Service"模式，即定义了服务又定义了ServiceMonitor
#上面重写了host的无 selector Service，加了port名字，label等
#下面的配置就废弃了
#/home/ziqiao/Documents/homelab-toy-system/infra/k8s/toy-infra/host-mysql-redis/mysqld-exporter.yaml
#/home/ziqiao/Documents/homelab-toy-system/infra/k8s/toy-infra/host-mysql-redis/redis-exporter.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysqld-exporter
  namespace: toy-infra
  labels: { app: mysqld-exporter }
spec:
  ports:
    - name: metrics
      port: 9104
      targetPort: 9104
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: mysqld-exporter-eps
  namespace: toy-infra
  labels:
    kubernetes.io/service-name: mysqld-exporter
addressType: IPv4
ports:
  - name: metrics
    port: 9104
endpoints:
  - addresses: ["192.168.40.23"]   # ziqiao-ASM100宿主机IP，跟你连宿主机MySQL用的同一个
---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: toy-infra
  labels: { app: redis-exporter }
spec:
  ports:
    - name: metrics
      port: 9121
      targetPort: 9121
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: redis-exporter-eps
  namespace: toy-infra
  labels:
    kubernetes.io/service-name: redis-exporter
addressType: IPv4
ports:
  - name: metrics
    port: 9121
endpoints:
  - addresses: ["192.168.40.23"]
